<resources>
    <string name="app_name">OPSC7213_GoalIgnite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="this_is_sample_task_inside_the_application" />
    <string name="this_is_the_sample_inside_the_application">This is the sample inside the application</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="to_do_list">To-Do List</string>
    <string name="add_new_item">Add new item</string>
    <string name="addcontact">AddContact</string>
    <string name="teachercontacts">TeacherContacts</string>
    <string name="teacher_contacts">Teacher Contacts</string>
    <string name="teacher_contact">Teacher Contact</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="back" />

    <string name="logins">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="a">A</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="login">Login</string>
    <string name="r">R</string>
    <string name="sign_in_with_google_account">Sign in with google account</string>
    <string name="login2">Login</string>
    <string name="Passwordbtn">Password</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="signin_with_facebook">Signin with Facebook</string>
    <string name="sign_in_with_apple_id">Sign in with Apple Id</string>
    <string name="forgot_password2">Forgot Password?</string>
    <string name="change_password">Change password</string>
    <string name="rest_your_password">Rest your password</string>
    <string name="new_password">new password</string>
    <string name="forgot_password3">Forgot Password?</string>
    <string name="forgot_password4">Forgot Password?</string>
    <string name="forgot_password5">Forgot Password?</string>
    <string name="email5">Email</string>
    <string name="or_continue_with2">Or continue with</string>
    <string name="google_button">google_btn</string>
    <string name="facebook_button">facebookbutton</string>
    <string name="apple_btns">apple_button</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login6">Login</string>
    <string name="registers">Register</string>
    <string name="or_continue_with4">Or continue with</string>
    <string name="registers6">Register</string>
    <string name="marks">Marks</string>
    <string name="password54">Password</string>
    <string name="google">goole2</string>
    <string name="facebook">facebookimage</string>
    <string name="apple">Apple</string>
    <string name="don_t_have_an_account3">Don\'t have an account?</string>
    <string name="add_marks">Add Marks</string>
    <string name="enter_marks">Enter marks</string>
    <string name="enter_marks3">Enter marks</string>
    <string name="google_web_client_id">642886062724-r0vdeq4r2fcai1jo4jgvd6u4e66tc5a3.apps.googleusercontent.com</string>

    <string name="grades">Grades</string>
    <string name="addgrades">addgrades</string>
    <string name="module_name">Module Name</string>
    <string name="module_percentage">Module percentage</string>
    <string name="student_module_mark">Student Module/Mark</string>
    <string name="module">Module</string>
    <string name="mark_percentage">mark percentage</string>
    <string name="theme">Theme</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="support_form">Support Form</string>
    <string name="language">Language</string>
    <string name="change_language">Change language</string>
    <string name="profile_management">Profile Management</string>
    <string name="timer">Timer</string>



</resources>