<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity1">

    <TextView
        android:id="@+id/Login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logins"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email5"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_label" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="365dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#C0C0C0"
        android:drawableStart="@drawable/mail"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#808080"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/password54"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="365dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#C0C0C0"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawableEnd="@drawable/eyes"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#808080"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textview" />

    <Button
        android:id="@+id/forgot_button"
        android:layout_width="259dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_button" />

    <TextView
        android:id="@+id/open_search_bar_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or_continue_with4"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


    <ImageButton
        android:id="@+id/facebook_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:contentDescription="@string/google"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/google"
        app:layout_constraintEnd_toStartOf="@+id/open_search_bar_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_search_bar_text_view" />

    <ImageButton
        android:id="@+id/google_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:contentDescription="@string/facebook"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/facebook"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toEndOf="@id/facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/open_search_bar_text_view" />

    <ImageButton
        android:id="@+id/apple_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/apple"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/apple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toEndOf="@id/google_button"
        app:layout_constraintTop_toBottomOf="@+id/open_search_bar_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account3"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="241dp"
        android:layout_height="51dp"
        android:layout_marginTop="156dp"
        android:background="@android:color/transparent"
        android:text="@string/registers6"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apple_button" />


</androidx.constraintlayout.widget.ConstraintLayout>


