<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Facebook">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="165dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/sign_in_with_google_account"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/apple_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/signin_with_facebook"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/apple_email"
        android:layout_width="360dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="#C0C0C0"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#101010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple_Id" />

    <EditText
        android:id="@+id/password_apple"
        android:layout_width="360dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawableEnd="@drawable/eyes"
        android:textColorHint="@color/black"
        android:background="#C0C0C0"
        android:hint="@string/Passwordbtn"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple_email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="348dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/login2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_apple" />




</androidx.constraintlayout.widget.ConstraintLayout>