<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AddEditGrade"
android:id="@+id/main">


    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/baseline_arrow_back" />

    <TextView
        android:id="@+id/studentmodule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/student_module_mark"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="@dimen/_10sdp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/subject"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/baseline_school_"
            android:layout_gravity="center"
            app:civ_border_width="@dimen/_1sdp"
            app:civ_border_color="@android:color/holo_blue_light"/>


        <!-- edittext for input-->
        <EditText
            android:id="@+id/moduleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/module_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:background="@drawable/background_input_field"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@drawable/book"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/moduleMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/module_percentage"
            android:inputType="numberSigned"
            android:textColorHint="@color/black"
            android:background="@drawable/background_input_field"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@drawable/baseline_grade_"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>




    </LinearLayout>

    <!--  button to add data to database-->
    <Button
        android:id="@+id/newGradesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="131dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="@drawable/button_rounded"/>


</RelativeLayout>