<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/teachersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text= "@string/teacher_contacts"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"/>



    <ImageView
        android:id="@+id/deleteCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/back"
        android:src="@drawable/baseline_delete_forever" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/teachersText"
        tools:listitem="@layout/row_contact_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="32dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:contentDescription="@string/addcontact"
        android:src="@drawable/baseline_add"/>




</RelativeLayout>

